--- a/_includes/three.html
+++ b/_includes/three.html
@@ -33,7 +33,7 @@
 			//create a Center of Transformation
 
                         var CoT = new BABYLON.TransformNode("root");
-			CoT.rotation.y = 1
+			CoT.rotation.x = 1
        
                         mesh.parent = CoT; //apply to Box
 			const rotation = mesh.rotationQuaternion.toEulerAngles()
