--- a/_includes/three.html
+++ b/_includes/three.html
@@ -32,8 +32,8 @@
 			
 			//create a Center of Transformation
 
-                        var CoT = new BABYLON.TransformNode("root");
-			CoT.rotation.x = 0.785398;
+                        var CoT = new BABYLON.TransformNode("{{ include.id }}");
+			CoT.rotation.x = 0.2596;
        
                         mesh.parent = CoT; //apply to Box
 			const rotation = mesh.rotationQuaternion.toEulerAngles()
