--- a/_includes/three.html
+++ b/_includes/three.html
@@ -49,7 +49,7 @@
 	      
 
 
-        const camera{{ include.id }} = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 15, new BABYLON.Vector3(10,2, 0));
+        const camera{{ include.id }} = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 15, new BABYLON.Vector3(0,2,10));
         camera{{ include.id }}.lowerRadiusLimit = 15;
         camera{{ include.id }}.upperRadiusLimit = 15;
         //camera{{ include.id }}.attachControl(canvas{{ include.id }}, true);
