--- a/_includes/three.html
+++ b/_includes/three.html
@@ -25,7 +25,7 @@
         BABYLON.SceneLoader.ImportMesh(
            undefined, // Name of meshes to load
            "{{ include.path }}", // Path on a server for the file
-           "saturn.gltf", // The file name that should be loaded from the above path
+           "{{ include.model }}", // The file name that should be loaded from the above path
             scene{{ include.id }},function (M) {
 		mesh = M[0];
 		scene{{ include.id }}.beforeRender = () => {
