--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,8 @@
 <div id="stars"></div>
 <div id="stars2"></div>
 <div id="stars3"></div>
+<div id="planets"></div>
+
 
 <section
     class="hero {% if page.hero_height %} {{ page.hero_height }} {% else %} is-medium {% endif %} is-bold"
