--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 <div id="stars"></div>
 <div id="stars2"></div>
 <div id="stars3"></div>
-<div id="planets"></div>
+{% include bg.html id="BACKGROUND" path="/assets/models/" model="saturn.gltf" %}
 
 
 <section
