--- a/_includes/bg.html
+++ b/_includes/bg.html
@@ -1,4 +1,4 @@
-<canvas id="renderCanvas{{ include.id }}" style="height: 100%; width: 100%"></canvas>
+<canvas id="renderCanvas{{ include.id }}" touch-action="scroll" style="height: 100%; width: 100%"></canvas>
 
 
 <script>
