--- a/_includes/bg.html
+++ b/_includes/bg.html
@@ -3,7 +3,7 @@
 
 <script>
 
-      const canvas{{ include.id }}= document.getElementById("renderCanvas{{ include.id }}"); // Get the canvas element
+      const canvas{{ include.id }}= document.body; // Get the canvas element
 
       const engine{{ include.id }} = new BABYLON.Engine(canvas{{ include.id }}, true); // Generate the BABYLON 3D engine
 	
