--- a/_includes/bg.html
+++ b/_includes/bg.html
@@ -1,4 +1,4 @@
-<canvas id="renderCanvasBG" touch-action="scroll" style="height: 1000%; width: 100%"></canvas>
+<canvas id="renderCanvasBG" touch-action="scroll" style="height: 1000%; width: 100% position: absolute; left: 0; top: 0;"></canvas>
 
 
 <script>
