--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 <div id="stars"></div>
 <div id="stars2"></div>
 <div id="stars3"></div>
-{% include bg.html id="BACKGROUND" path="/assets/models/" model="saturn.gltf" %}
+
 
 
 <section
@@ -29,11 +29,10 @@
             </div>
           {% endif %}
           <div class="control">
-            <div class="tags has-addons">
-              <span class="tag is-dark is-large">Download:</span>
-              <a href="https://www.curseforge.com/minecraft/mc-mods/cosmic-horizons"class="tag is-large is-danger" style="background: #f16436;"><img height="32" width="32" src="https://cdn.simpleicons.org/curseforge/white" style="margin-right: 10px;"/>Curseforge</a>
-              <a class="tag is-success is-large"><img height="32" width="32" src="https://cdn.simpleicons.org/modrinth/white" style="margin-right: 10px;"/>Modrinth</a>
-            </div>
+              <a href="https://www.curseforge.com/minecraft/mc-mods/cosmic-horizons" class="button is-large is-danger" style="background: #f16436;"><img height="32" width="32" src="https://cdn.simpleicons.org/curseforge/white" style="margin-right: 10px;"/>Curseforge</a>
+              <a href="https://modrinth.com/mod/cosmic-horizons(cosmos)" class="button is-success is-large"><img height="32" width="32" src="https://cdn.simpleicons.org/modrinth/white" style="margin-right: 10px;"/>Modrinth</a>
+              <a href="https://discord.gg/d6EtbjVs9j" class="button is-link is-large"><img height="32" width="32" src="https://cdn.simpleicons.org/discord/white" style="margin-right: 10px;"/>Modrinth</a>
+          
           </div>
           
         </div>
