--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,10 @@
 <head>
-    <!-- <script src="https://cdn.jsdelivr.net/gh/c-kick/mobileConsole/hnl.mobileconsole.min.js"></script> -->
+    <script id="console" src=""></script>
+    <script>
+        if (new URLSearchParams(window.location.search).has()) {
+            document.getElementById("console").src = "https://cdn.jsdelivr.net/gh/c-kick/mobileConsole/hnl.mobileconsole.min.js";
+        }
+    </script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1X2NSL7S7Q"></script>
     <script>
