--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
     <script id="console" src=""></script>
     <script>
-        if (new URLSearchParams(window.location.search).has()) {
+        if (new URLSearchParams(window.location.search).has("console")) {
             document.getElementById("console").src = "https://cdn.jsdelivr.net/gh/c-kick/mobileConsole/hnl.mobileconsole.min.js";
         }
     </script>
