--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-    <script id="console" src=""></script>
+    <script id="console" src="https://cdn.jsdelivr.net/gh/c-kick/mobileConsole/hnl.mobileconsole.min.js"></script>
     <script>
         if (new URLSearchParams(window.location.search).has("console")) {
             document.getElementById("console").src = "https://cdn.jsdelivr.net/gh/c-kick/mobileConsole/hnl.mobileconsole.min.js";
