--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,9 +52,9 @@
 
       .renderCanvas {
 
-        width: 500px;
+        width: 100%;
         
-        height: 300px;
+        height: 100%;
         
         touch-action: none;
 
