--- a/_includes/three.html
+++ b/_includes/three.html
@@ -81,14 +81,16 @@
 
 
       const scene{{ include.id }} = createScene{{ include.id }}(); //Call the createScene function
-
+      var skip{{ include.id }} = false
 
 
       // Register a render loop to repeatedly render the scene
 
       engine{{ include.id }}.runRenderLoop(function () {
-
-        scene{{ include.id }}.render();
+	        if (!skip{{ include.id }}) {
+                    scene{{ include.id }}.render();
+                }
+                skip{{ include.id }} = !skip{{ include.id }}
 
       });
 
