--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -4,6 +4,7 @@
 // Code for the planet editor page. NEEDS CLEANING UP, SORRY
 
 // If the page doesn't have a planetCanvas, its not the right page to be doing this JS on
+// The page this is looking for is https://cosmic-mod.github.io/editor/, so you can use that pages html for local testing
 // (Hacky, I know, but it works...)
 if (document.getElementById("planetCanvas")) {
     // Get elements for later
